# order-service/internal/handlers/handlersOgen.go
@@ -3,6 +3,8 @@ package handlers
 import (
 	"context"
 	"errors"
+	"fmt"
+	"order-service/internal/oapi"
 	api "order-service/internal/oapi"
 	"order-service/internal/repository/model"
 	"order-service/internal/service/order"
@@ -13,11 +15,32 @@ type OrderHandler struct {
 }
 
 func (h *OrderHandler) CreateOrder(ctx context.Context, req *api.CreateOrderRequest) (api.CreateOrderRes, error) {
-	order, err := h.Service.CreateOrder(ctx, req.UserUUID, req.PartUuids)
+	if len(req.Items) == 0 {
+		return nil,  fmt.Errorf("%w: items required", model.ErrBadRequest)
+	}
+	items := make([]model.Item, len(req.Items))
+	if req.UserUUID == "" {
+		return nil, model.ErrBadRequest
+	}
+
+	for i, v := range req.Items {
+		if v.PartUUID == "" {
+			return nil, fmt.Errorf("%w: part_uuid is required for item %d", model.ErrBadRequest, i)
+		}
+		if v.Quantity <= 0 {
+			return nil, fmt.Errorf("%w: quantity must be greater than 0 for item %d", model.ErrBadRequest, i)
+		}
+
+		items[i] = model.Item{
+			PartUUID: v.PartUUID,
+			Quantity: int(v.Quantity),
+		}
+	}
+
+	order, err := h.Service.CreateOrder(ctx, req.UserUUID, items)
 	if err != nil {
 		return nil, err
 	}
-
 	return &api.CreateOrderResponse{
 		OrderUUID:  order.OrderUUID,
 		TotalPrice: order.TotalPrice,
@@ -33,11 +56,21 @@ func (h *OrderHandler) GetOrder(
 	if err != nil {
 		return nil, err
 	}
+	items := make([]oapi.OrderItemsItem, 0, len(order.Items))
+
+	for _, v := range order.Items {
+		items = append(items, api.OrderItemsItem{
+			Quantity: float64(v.Quantity),
+			PartUUID: v.PartUUID,
+			Price:    v.Price,
+			Name:     v.Name,
+		})
+	}
 
 	return &api.Order{
 		OrderUUID:  order.OrderUUID,
 		UserUUID:   order.UserUUID,
-		PartUuids:  order.PartUuidDs,
+		Items:      items,
 		TotalPrice: order.TotalPrice,
 		Status:     api.OrderStatus(order.Status),
 	}, nil
@@ -84,7 +117,7 @@ func (h *OrderHandler) NewError(
 		return &api.ErrorStatusCode{
 			StatusCode: 404,
 			Response: api.Error{
-				Message: "order not found",
+				Message: err.Error(),
 			},
 		}
 
@@ -92,7 +125,23 @@ func (h *OrderHandler) NewError(
 		return &api.ErrorStatusCode{
 			StatusCode: 409,
 			Response: api.Error{
-				Message: "order conflict",
+				Message: err.Error(),
+			},
+		}
+
+	case errors.Is(err, model.ErrBadRequest):
+		return &api.ErrorStatusCode{
+			StatusCode: 400,
+			Response: api.Error{
+				Message: err.Error(),
+			},
+		}
+
+	case errors.Is(err, model.ErrNotEnoughInStock):
+		return &api.ErrorStatusCode{
+			StatusCode: 400,
+			Response: api.Error{
+				Message: err.Error(),
 			},
 		}
 
