# order-service/internal/repository/model/model.go
@@ -15,8 +15,10 @@ const (
 )
 
 var (
-	ErrConflict = errors.New("409 conflict")
-	ErrNotFound = errors.New("404 not found")
+	ErrBadRequest       = errors.New("400 bad request")
+	ErrConflict         = errors.New("409 conflict")
+	ErrNotFound         = errors.New("404 not found")
+	ErrNotEnoughInStock = errors.New("400 not enough in stock")
 )
 
 const (
@@ -29,17 +31,24 @@ const (
 type Order struct {
 	OrderUUID string `json:"order_uuid"`
 	UserUUID  string /* `json:"user_uuid"` */
-	 PartUUIDs       []string `json:"part_uuids"` 
-/* 	Parts                          []*Part `json:"parts"` */
-	TotalPrice                     float64 `json:"total_price"`
-	TransactionUUID                *string
-	PaymentMethod                  *PaymentMethod `json:"payment_method"`
-	Status                         OrderStatus    `json:"status"`
+	/* PartUUIDs       []string `json:"part_uuids"` */
+	Items           []Item  `json:"items"`
+	TotalPrice      float64 `json:"total_price"`
+	TransactionUUID *string
+	PaymentMethod   *PaymentMethod `json:"payment_method"`
+	Status          OrderStatus    `json:"status"`
 }
 
 type Part struct {
 	UUID     string
-	Name     string
 	Price    float64
 	Quantity int
+	Name     string
+}
+
+type Item struct {
+	PartUUID string  `json:"part_uuid"`
+	Quantity int     `json:"quantity"`
+	Price    float64 `json:"price"`
+	Name     string  `json:"name"`
 }
